# Aster

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  flake.nix
.github/workflows/: build.yml
crates/buffer/: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/file/: Cargo.toml
crates/markup/: Cargo.toml
crates/markup/src/: lib.rs
crates/markup/src/formats/: adoc.rs  markdown.rs  mod.rs  org.rs  rst.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
nix/: buildPackage.nix  devShell.nix  formatter.nix
