[package]
name = "aster"
version = "0.1.1"
edition = "2021"
description = "A Simpler Text Editor written in Rust"
authors = ["Playfairs"]
license = "MIT"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.17"
aster-settings = { path = "../settings" }
aster-markup = { path = "../markup" }

[features]
default = []
